--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 spring.application.name=paro
+# Configuración de la base de datos
 spring.datasource.url=jdbc:mysql://localhost:3306/paro
 spring.datasource.username=root
 spring.datasource.password=curso
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Configuración del servidor
+server.port=8080
