--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 spring.application.name=paro
-spring.datasource.url=jdbc:mysql://localhost:3306/paro
+spring.datasource.url=jdbc:mysql://localhost:3306/paro?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=curso
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.open-in-view=false
+spring.thymeleaf.check-template-location=false
+
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+
 server.port=8080
