--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=paro
-spring.datasource.url=jdbc:mysql://localhost:3306/paro?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/paro?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=curso
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -11,3 +11,10 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
 server.port=8080
+
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.cache=false
